"""
Analysis Controller for Enhanced Prior Authorization System

This controller implements secure, scalable Gen AI-powered document analysis and clinical criteria 
matching endpoints with comprehensive monitoring, streaming support, and HIPAA compliance features.

Version: 1.0.0
"""

# External imports with versions
from fastapi import APIRouter, HTTPException, Depends, BackgroundTasks  # v0.100.0
from fastapi.responses import StreamingResponse  # v0.100.0
import grpc  # v1.54.0
from pydantic import BaseModel, Field, validator  # v2.0.0
import logging  # python3.11+
import asyncio  # python3.11+
from prometheus_client import Counter, Histogram, Gauge  # v0.17.0
from typing import Dict, Optional, Any, AsyncGenerator
from datetime import datetime
import json

# Internal imports
from ..services.document_analyzer import DocumentAnalyzer
from ..services.gpt_service import GPTService
from ..utils.text_processor import TextProcessor

# Configure HIPAA-compliant logging
logging.basicConfig(
    level=logging.INFO,
    format='%(asctime)s - %(name)s - %(levelname)s - %(message)s - %(processName)s'
)
logger = logging.getLogger(__name__)

# Prometheus metrics
ANALYSIS_REQUESTS = Counter('document_analysis_total', 'Total document analysis requests')
CRITERIA_MATCHES = Counter('criteria_matching_total', 'Total criteria matching requests')
STREAMING_SESSIONS = Counter('streaming_sessions_total', 'Total streaming analysis sessions')
PROCESSING_TIME = Histogram('analysis_processing_seconds', 'Analysis processing time')
ERROR_RATE = Counter('analysis_errors_total', 'Total analysis errors')
CONFIDENCE_SCORES = Gauge('analysis_confidence_scores', 'Analysis confidence scores')

# Request/Response Models
class AnalyzeDocumentRequest(BaseModel):
    """Document analysis request model with validation."""
    document_text: str = Field(..., min_length=1, max_length=1000000)
    analysis_parameters: Optional[Dict[str, Any]] = Field(default=None)
    security_context: Dict[str, Any] = Field(...)

    @validator('security_context')
    def validate_security_context(cls, v):
        required_fields = ['user_id', 'access_level', 'session_id']
        if not all(field in v for field in required_fields):
            raise ValueError("Invalid security context")
        return v

class MatchCriteriaRequest(BaseModel):
    """Criteria matching request model with validation."""
    document_analysis: Dict[str, Any] = Field(...)
    criteria_rules: Dict[str, Any] = Field(...)
    security_context: Dict[str, Any] = Field(...)

    @validator('criteria_rules')
    def validate_criteria_rules(cls, v):
        required_fields = ['criteria_type', 'rules']
        if not all(field in v for field in required_fields):
            raise ValueError("Invalid criteria rules")
        return v

class StreamAnalysisRequest(BaseModel):
    """Streaming analysis request model with validation."""
    document_text: str = Field(..., min_length=1)
    chunk_size: Optional[int] = Field(default=4096, ge=1024, le=8192)
    security_context: Dict[str, Any] = Field(...)

class AnalysisController:
    """
    FastAPI controller implementing secure, monitored AnalysisService with streaming support.
    """

    def __init__(
        self,
        document_analyzer: DocumentAnalyzer,
        gpt_service: GPTService,
        metrics_config: Optional[Dict] = None
    ):
        """Initialize controller with required services and monitoring."""
        self.document_analyzer = document_analyzer
        self.gpt_service = gpt_service
        self.logger = logger
        self.router = APIRouter(prefix="/api/v1/analysis", tags=["analysis"])
        self.analysis_lock = asyncio.Lock()
        
        # Initialize metrics
        self.metrics = {
            'requests': ANALYSIS_REQUESTS,
            'matches': CRITERIA_MATCHES,
            'streaming': STREAMING_SESSIONS,
            'processing_time': PROCESSING_TIME,
            'errors': ERROR_RATE,
            'confidence': CONFIDENCE_SCORES
        }
        
        # Register routes
        self._register_routes()
        
        self.logger.info("Analysis Controller initialized successfully")

    def _register_routes(self):
        """Register API routes with security and validation."""
        self.router.add_api_route(
            "/analyze",
            self.analyze_document,
            methods=["POST"],
            response_model=Dict[str, Any],
            status_code=200,
            summary="Analyze clinical document",
            description="Analyze clinical document using Gen AI with enhanced security"
        )
        
        self.router.add_api_route(
            "/match",
            self.match_criteria,
            methods=["POST"],
            response_model=Dict[str, Any],
            status_code=200,
            summary="Match clinical criteria",
            description="Match clinical criteria against document analysis"
        )
        
        self.router.add_api_route(
            "/stream",
            self.stream_analysis,
            methods=["POST"],
            response_class=StreamingResponse,
            status_code=200,
            summary="Stream document analysis",
            description="Stream real-time document analysis with progress updates"
        )

    async def analyze_document(
        self,
        request: AnalyzeDocumentRequest,
        background_tasks: BackgroundTasks
    ) -> Dict[str, Any]:
        """
        Analyze clinical document with comprehensive security and monitoring.
        
        Args:
            request: Validated document analysis request
            background_tasks: FastAPI background tasks handler
            
        Returns:
            Dict containing analysis results with confidence scores
        """
        start_time = datetime.now()
        self.metrics['requests'].inc()
        
        try:
            # Validate security context
            if not self._validate_security_context(request.security_context):
                raise HTTPException(status_code=403, detail="Invalid security context")
            
            # Process document with timeout control
            async with self.analysis_lock:
                analysis_result = await asyncio.wait_for(
                    self.document_analyzer.analyze_document(
                        request.document_text,
                        request.analysis_parameters,
                        request.security_context
                    ),
                    timeout=30.0
                )
            
            # Update metrics
            processing_time = (datetime.now() - start_time).total_seconds()
            self.metrics['processing_time'].observe(processing_time)
            self.metrics['confidence'].set(analysis_result['confidence_scores']['overall'])
            
            # Schedule background audit logging
            background_tasks.add_task(
                self._log_analysis_operation,
                "document_analysis",
                request.security_context,
                processing_time
            )
            
            return analysis_result
            
        except asyncio.TimeoutError:
            self.metrics['errors'].inc()
            raise HTTPException(status_code=408, detail="Analysis timeout")
        except Exception as e:
            self.metrics['errors'].inc()
            self.logger.error(f"Analysis error: {str(e)}")
            raise HTTPException(status_code=500, detail="Analysis failed")

    async def match_criteria(
        self,
        request: MatchCriteriaRequest,
        background_tasks: BackgroundTasks
    ) -> Dict[str, Any]:
        """
        Match clinical criteria with enhanced validation and monitoring.
        
        Args:
            request: Validated criteria matching request
            background_tasks: FastAPI background tasks handler
            
        Returns:
            Dict containing matching results with confidence scores
        """
        start_time = datetime.now()
        self.metrics['matches'].inc()
        
        try:
            # Validate security context
            if not self._validate_security_context(request.security_context):
                raise HTTPException(status_code=403, detail="Invalid security context")
            
            # Match criteria with timeout control
            async with self.analysis_lock:
                match_result = await asyncio.wait_for(
                    self.document_analyzer.match_criteria(
                        request.document_analysis,
                        request.criteria_rules,
                        request.security_context
                    ),
                    timeout=30.0
                )
            
            # Update metrics
            processing_time = (datetime.now() - start_time).total_seconds()
            self.metrics['processing_time'].observe(processing_time)
            
            # Schedule background audit logging
            background_tasks.add_task(
                self._log_analysis_operation,
                "criteria_matching",
                request.security_context,
                processing_time
            )
            
            return match_result
            
        except asyncio.TimeoutError:
            self.metrics['errors'].inc()
            raise HTTPException(status_code=408, detail="Matching timeout")
        except Exception as e:
            self.metrics['errors'].inc()
            self.logger.error(f"Matching error: {str(e)}")
            raise HTTPException(status_code=500, detail="Matching failed")

    async def stream_analysis(
        self,
        request: StreamAnalysisRequest,
        background_tasks: BackgroundTasks
    ) -> StreamingResponse:
        """
        Stream real-time analysis with resource management and monitoring.
        
        Args:
            request: Validated streaming analysis request
            background_tasks: FastAPI background tasks handler
            
        Returns:
            StreamingResponse with analysis updates
        """
        self.metrics['streaming'].inc()
        session_id = f"stream_{int(datetime.now().timestamp())}"
        
        try:
            # Validate security context
            if not self._validate_security_context(request.security_context):
                raise HTTPException(status_code=403, detail="Invalid security context")
            
            # Initialize streaming generator
            async def analysis_generator() -> AsyncGenerator[str, None]:
                try:
                    async with self.analysis_lock:
                        async for result in self.document_analyzer.stream_analysis(
                            request.document_text,
                            {"chunk_size": request.chunk_size},
                            request.security_context
                        ):
                            yield json.dumps(result) + "\n"
                            
                except Exception as e:
                    self.logger.error(f"Streaming error: {str(e)}")
                    yield json.dumps({
                        "session_id": session_id,
                        "status": "error",
                        "error": str(e)
                    }) + "\n"
                finally:
                    # Schedule background audit logging
                    background_tasks.add_task(
                        self._log_analysis_operation,
                        "streaming_analysis",
                        request.security_context,
                        None
                    )
            
            return StreamingResponse(
                analysis_generator(),
                media_type="application/x-ndjson"
            )
            
        except Exception as e:
            self.metrics['errors'].inc()
            self.logger.error(f"Streaming initialization error: {str(e)}")
            raise HTTPException(status_code=500, detail="Streaming failed")

    def _validate_security_context(self, security_context: Dict[str, Any]) -> bool:
        """Validate security context for HIPAA compliance."""
        required_fields = ['user_id', 'access_level', 'session_id']
        return all(field in security_context for field in required_fields)

    async def _log_analysis_operation(
        self,
        operation: str,
        security_context: Dict[str, Any],
        processing_time: Optional[float]
    ):
        """Log analysis operations for HIPAA compliance."""
        try:
            audit_entry = {
                "timestamp": datetime.now().isoformat(),
                "operation": operation,
                "user_id": security_context['user_id'],
                "session_id": security_context['session_id'],
                "processing_time": processing_time
            }
            self.logger.info(f"Audit log: {json.dumps(audit_entry)}")
        except Exception as e:
            self.logger.error(f"Audit logging error: {str(e)}")

# Export the controller
__all__ = ['AnalysisController']